--- a/ms-usuarios/src/main/resources/application.properties
+++ b/ms-usuarios/src/main/resources/application.properties
@@ -1,21 +1,19 @@
 # Configuración del servidor
-server.port=8080
+server.port=8181
 
-# Configuración de Oracle
-# El URL de conexión para una base de datos local
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+
+spring.datasource.url=jdbc:oracle:thin:@host.docker.internal:1521/XE
 spring.datasource.username=prueba
 spring.datasource.password=prueba
 spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 
 # Configuración de JPA/Hibernate
-# Esto configurará Hibernate para que cree, actualice o valide la base de datos
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#SQL Init
+# SQL Init
 spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
 spring.jpa.defer-datasource-initialization=true
